# LOB-RL

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  DOMAIN_PRIORS.md  Dockerfile  LAST_TOUCH.md  LOB_FIX_IMPACT.md  PRD.md  QUESTIONS.md  README.md  RESEARCH_LOG.md  TDS.md  conftest.py  experiment.sh  find_formula.py  find_formula2.py  orchestrator_directive.md  pyproject.toml  tdd-aliases.sh  tdd.sh
.claude/hooks/: pre-tool-use.sh
.claude/prompts/: frame.md  run.md  tdd-green.md  tdd-red.md  tdd-refactor.md
aws/: README.md  fetch-results.sh  launch.sh  monitor.sh  setup.sh  upload-cache.sh
data/: README.md
docs/: README.md  b1-python-bindings.md  b2-real-dbn-converter.md  bar-builder.md  bar-level-env.md  barrier-feature-compute.md  barrier-labels-cpp.md  barrier-labels.md  barrier-precompute-cpp.md  book-bar-features.md  book-extensions.md  bug1-modify-price-change.md  bug2-flattening-pnl.md  checkpointing.md  contract-boundary-guard.md  data-integrity-fixes.md  depth-queries.md  dual-direction-labels.md  execution-cost.md  first-passage-analysis.md  fix-precompute-events.md  frame-stacking.md  ibar-feature.md  lazy-loading.md  lob-features-fix.md  medium-audit-fixes.md  native-dbn-source.md  participation-bonus.md  per-bar-features.md  phase1-microstructure-features.md  phase2-microstructure-features.md  precompute-binding.md  precompute-cache.md  precompute.md  precomputed-env.md  precomputed-multi-day.md  recurrent-ppo.md  refactor-roadmap.md  sequence-models.md  shuffle-split.md  (+23 more)
docs/archive/: README.md
experiments/: Asymmetric First-Passage Trading.md  exp-003-does-the-observation-space-contain-any-p.md  exp-004-22-feature-supervised-diagnostic.md  exp-008-bar-size-sweep.md  exp-010-permutation-test.md  exp-011-feature-group-ablation.md  survey-199-training-days.md  survey-22-feature-supervised-diagnostic.md  survey-b2000-realistic-barriers.md  survey-bar-size-sweep-bss.md  survey-book-state-vs-trade-flow-features.md  survey-execution-cost-ablation.md  survey-null-calibration-ybar.md  survey-observation-signal-audit.md  survey-phase2-signal-detection-brier.md
include/lob/: book.h  env.h  feature_builder.h  message.h  precompute.h  reward.h  session.h  source.h
python/: setup.py
python/lob_rl/: README.md  __init__.py  _bar_layout.py  _config.py  _obs_layout.py  _reward.py  _statistics.py  bar_aggregation.py  bar_level_env.py  convert_dbn.py  gym_env.py  multi_day_env.py  order_sim_env.py  precomputed_env.py  wrappers.py
python/tests/: README.md  conftest.py  test_bar_aggregation.py  test_bar_feature_bindings.py  test_bar_level_env.py  test_bar_multi_day.py  test_bar_train.py  test_barrier_precompute_binding.py  test_bindings_b1.py  test_cache_multi_day.py  test_checkpointing.py  test_constellation_bindings.py  test_contract_boundary_guard.py  test_convert_dbn.py  test_depth_query_bindings.py  test_dual_direction_labels.py  test_execution_cost.py  test_frame_stacking.py  test_from_cache.py  test_gym.py  test_gym_wrapper.py  test_lazy_loading.py  test_multi_day_env.py  test_native_dbn_source.py  test_obs44.py  test_participation_bonus.py  test_per_bar_features.py  test_per_bar_features_binding.py  test_precompute_binding.py  test_precompute_cache.py  test_precomputed_env.py  test_precomputed_multi_day.py  test_real_dbn_converter.py  test_recurrent_ppo.py  test_reward_mode.py  test_run_contract.py  test_shuffle_split.py  test_step_interval.py  test_streaming_normalizer_binding.py  test_temporal_features.py  (+2 more)
references/: microstructure_features.md
references/known_working/: example_lob.cpp  example_lob_output.txt  mes_reference_bbo_20220103.txt
research/: README.md  experiment_report.md  monitor.sh
results/0w3gtzsu1h3nhl/: vec_normalize.pkl
results/6kwbf810ribiza/: vec_normalize.pkl
results/exp-001-does-increasing-training-data-from-20-to/: analysis.md  config.json  eval_oos.py  metrics.json  oos_results.json  spec.md
results/exp-002-execution-cost-ablation/: analysis.md  config.json  count_trades.py  cross_eval.py  cross_eval_results.json  eval_insample.py  extract_insample.py  extract_tb_metrics.py  insample_metrics.json  insample_results.json  metrics.json  spec.md  tb_metrics.json  trade_counts.json
results/exp-003-does-the-observation-space-contain-any-p/: bar_1000.json  bar_500.json
results/exp-004-22-feature-supervised-diagnostic/: metrics.json
results/exp-005-null-calibration/: analysis.md  config.json  metrics.json  spec.md
results/exp-006-signal-detection/: analysis.md  config.json  metrics.json  spec.md
results/exp-007-sequence-model-signal-detection/: analysis.md  config.json  metrics.json  spec.md
runpod/: README.md  fetch-results.sh  launch.sh  upload-cache.sh
scripts/: README.md  __init__.py  bar_supervised_diagnostic.py  experiment-watch.py  precompute_barrier_cache.py  precompute_cache.py  run_barrier_diagnostic.py  run_barrier_diagnostic_v2.py  run_exp001.py  run_exp004_diagnostic.py  run_exp004_quick.py  run_exp006_signal_detection.py  run_exp007_sequence_model_signal_detection.py  run_exp008_bar_size_sweep.py  run_exp009_realistic_barrier_sweep.py  run_exp010_permutation_test.py  run_exp011_feature_group_ablation.py  smoke_test_barrier.py  start.sh  supervised_diagnostic.py  tdd-watch.py  test-summary.sh  train.py  train_barrier.py  watch_download.sh
templates/: experiment-spec.md  train-config.example.json
tests/: README.md  test_barrier_bar_builder.cpp  test_barrier_features.cpp  test_barrier_helpers.h  test_barrier_labels.cpp  test_barrier_precompute.cpp  test_binary_file_source.cpp  test_book.cpp  test_book_depth.cpp  test_data_integrity.cpp  test_dbn_file_source.cpp  test_dbn_message_map.cpp  test_env.cpp  test_env_obs44.cpp  test_execution_cost.cpp  test_feature_builder.cpp  test_fix_precompute_events.cpp  test_flattening_pnl.cpp  test_helpers.h  test_lob_vs_databento_reference.cpp  test_participation_bonus.cpp  test_per_bar_features.cpp  test_precompute.cpp  test_reward_calculator.cpp  test_session.cpp  test_session_env.cpp  test_source.cpp  test_streaming_normalizer.cpp
tools/: gen_fixture.cpp
(+320 files in other folders)
